--- a/css/lumos.css
+++ b/css/lumos.css
@@ -62,7 +62,7 @@
 	position: relative;
 	text-align: left;
 	padding-top: 100px;
-*/
+
     background-color: rgba(0,0,0,0.1);
 	background: url("../img/team.png") no-repeat center center fixed; 
     -webkit-background-size: cover;
@@ -70,7 +70,25 @@
     -o-background-size: cover;
     background-size: cover;
     min-height: 60vh;
+    */
 
+  background: -webkit-linear-gradient(90deg, #348F50 10%, #56B4D3 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #348F50 10%, #56B4D3 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #348F50 10%, #56B4D3 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #348F50 10%, #56B4D3 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #348F50 10%, #56B4D3 90%); /* W3C */
+  min-height: 50vh;
+
+}
+#masthead-contact{
+
+
+  background: -webkit-linear-gradient(90deg, #5f2c82 10%, #49a09d 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #5f2c82 10%, #49a09d 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #5f2c82 10%, #49a09d 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #5f2c82 10%, #49a09d 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #5f2c82 10%, #49a09d 90%); /* W3C */
+        min-height: 40vh;
 }
 
 #masthead-science{
@@ -95,6 +113,11 @@
 
 #blog-title{
 	font-size: 72px;
+}
+
+#contact-title{
+	font-size: 72px;
+	color: white;
 }
 #masthead-blog > .container{
 	color: white;
@@ -234,3 +257,6 @@ html * {
     background-size: cover;
 
 }
+
+/*Plug-in controls*/ 
+.IN-widget iframe {left: 180px !important; top: 0px !important; width: 370px !important;}
