--- a/css/lumos.css
+++ b/css/lumos.css
@@ -1,6 +1,3 @@
-#about-container{
-
-}
 #team-container{
     background:#7f7f7f;
 	background-color: rgba(0,0,0,0.77);
@@ -9,12 +6,12 @@
     margin-bottom: 50px;
 }
 
-
 #names{
 	font-family: 'Maven Pro', sans-serif; 
 	font-weight: 300;
 	font-size: 18px;
 }
+
 #long-name{
 	font-family: 'Maven Pro', sans-serif; 
 	font-weight: 300;
@@ -25,12 +22,11 @@
 #team-container > .row > .col-md-2 > h5{
 	font-family: 'Maven Pro', sans-serif; 
 	font-weight: 200;
-
 }
+
 #team-container{
 	color: white;
 	text-align: center;
-    
 }
 
 #slogan{
@@ -39,39 +35,39 @@
 }
 
 #masthead{
-	/*
-	background-color: #122f7f;
-	min-height: 500px;
-	position: relative;
-	text-align: left;
-	padding-top: 100px;
-*/
+    /*
     background-color: rgba(0,0,0,0.1);
 	background: url("../img/lumos-img.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    min-height:100vh;
+	*/
+
+
+    min-height: 100vh;
+	background: #1D976C; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to left, #1D976C , #80EDA9); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to left, #1D976C , #80EDA9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 }
+#vcenter {
+    padding-top: 5em;
+}
+
+.dotted {
+  padding: 15em 15em;
+  background-image: -webkit-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 3px, transparent 3px, transparent 100%);
+  background-image: -moz-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,10) 1px, transparent 1px, transparent 100%);
+  background-image: -ms-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,10) 1px, transparent 1px, transparent 100%);
+  background-image: repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+  -webkit-background-size: 10px 10px;
+  -moz-background-size: 3px 3px;
+  background-size: 15px 15px;
+  }
+
 #masthead-blog{
-	/*
-	background-color: #122f7f;
-	min-height: 500px;
-	position: relative;
-	text-align: left;
-	padding-top: 100px;
-
-    background-color: rgba(0,0,0,0.1);
-	background: url("../img/team.png") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-height: 60vh;
-    */
-
   background: -webkit-linear-gradient(90deg, #348F50 10%, #56B4D3 90%); /* Chrome 10+, Saf5.1+ */
   background:    -moz-linear-gradient(90deg, #348F50 10%, #56B4D3 90%); /* FF3.6+ */
   background:     -ms-linear-gradient(90deg, #348F50 10%, #56B4D3 90%); /* IE10 */
@@ -80,9 +76,8 @@
   min-height: 50vh;
 
 }
+
 #masthead-contact{
-
-
   background: -webkit-linear-gradient(90deg, #5f2c82 10%, #49a09d 90%); /* Chrome 10+, Saf5.1+ */
   background:    -moz-linear-gradient(90deg, #5f2c82 10%, #49a09d 90%); /* FF3.6+ */
   background:     -ms-linear-gradient(90deg, #5f2c82 10%, #49a09d 90%); /* IE10 */
@@ -92,13 +87,6 @@
 }
 
 #masthead-science{
-	/*
-	background-color: #122f7f;
-	min-height: 500px;
-	position: relative;
-	text-align: left;
-	padding-top: 100px;
-*/
     background-color: rgba(0,0,0,0.1);
 	background: url("../img/science.jpg") no-repeat center center fixed; 
     background-repeat: no-repeat; 
@@ -108,7 +96,6 @@
     -o-background-size: cover;
     background-size: cover;
     min-height: 60vh;
-
 }
 
 #blog-title{
@@ -157,7 +144,7 @@ input.btn-primary {
 	font-weight: 500 
 }
 #footer{
-
+	margin-top: 3vh;
 	background-color: white;
 }
 
@@ -177,12 +164,15 @@ h1{
 	padding-right: 10px;
 	color: black;
 }
+
 #science{
 	font-family: 'Maven Pro', sans-serif;
 	font-weight: bold;
 	padding-right: 10px;
 }
+
 #science > a{color:black;}
+
 #home{
 	font-family: 'Maven Pro', sans-serif;
 	font-weight: bold;
