--- a/css/lumos.css
+++ b/css/lumos.css
@@ -35,21 +35,20 @@
 }
 
 #masthead{
-    /*
+    
     background-color: rgba(0,0,0,0.1);
-	background: url("../img/lumos-img.jpg") no-repeat center center fixed; 
+	background: url("../img/lumos_background.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-	*/
-
-
+	
     min-height: 100vh;
-	background: #1D976C; /* fallback for old browsers */
-	background: -webkit-linear-gradient(to left, #1D976C , #80EDA9); /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to left, #1D976C , #80EDA9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	
+}
 
+#logo-container{
+	background-color: rgba(0,0,0,0.6);
 
 }
 #vcenter {
@@ -205,7 +204,7 @@ h1{
 }
 
 #sign-up{
-	padding-top: 10vh;	
+	padding-top: 5vh;	
 }
 
 #transparent-newsletter{
